worked on backend project structure

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 </head>
-<body>hi
-	<script src="bootstrap/css/bootstrap.min.css"></script>
-	<script src="script/compiled/app.js"></script>
+<body>
+
+	<script src="../bootstrap/css/bootstrap.min.css"></script>
+	<script src="../script/compiled/app.js"></script>
 </body>
 </html>
